--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -32,37 +32,42 @@ set -g history-limit 10000
 setw -g monitor-activity on
 set -g visual-activity on
 
-# Add task count and time to status bar. See strftime for time strings.
+# Add time to status bar. See strftime for time strings.
 set -g status-interval 5
-set -g status-right '#(date +"%B %d %I:%M")'
+set -g status-right "#[fg=brightblue,bg=default]%Y-%m-%d"
 set -g status-right-length 150
+
+set -g status-left "#[fg=brightblue,bold]#h #[fg=yellow,bold]| "
+set -g status-left-length 20
 
 ############################################# Colors
 # Activity Alert
 set -g window-status-activity-style fg=black,bg=yellow
 
 # Status Line
-set -g status-style fg=yellow,bg=brightblack,bright
+set -g status-style fg=yellow,bg=default
 
 # Window title - default
-set -g window-status-style fg=yellow,bg=default,dim
+set -g window-status-style fg=blue,bg=default,dim
+set -g window-status-format "#[fg=yellow]#I#[fg=yellow,bold]:#[fg=white]#W#[fg=yellow,bold]#F"
 
 # Window title - active
-set -g window-status-current-style fg=green,bg=default,bright
+set -g window-status-current-style fg=white,bg=default,bright
+set -g window-status-current-format "#[fg=brightblue]#I#[fg=yellow,bold]:#[fg=white]#W#[fg=brightblue,bold]#F"
 
 # Pane border
-set -g pane-border-style fg=white,bg=black
-set -g pane-active-border-style fg=yellow,bg=black
+set -g pane-border-style fg=white,bg=default
+set -g pane-active-border-style fg=yellow,bg=default
 
 # Command line / Message text
-set -g message-style bg=black,fg=yellow
+set -g message-style bg=default,fg=yellow
 
 # Pane number display
 set -g display-panes-active-colour yellow
 set -g display-panes-colour brightblue
 
 # Clock
-setw -g clock-mode-colour yellow
+setw -g clock-mode-colour brightblue
 
 ############################################# TPM CONFIG
 
