--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -33,8 +33,8 @@ setw -g monitor-activity on
 set -g visual-activity on
 
 # Add time to status bar. See strftime for time strings.
-set -g status-interval 5
-set -g status-right "#[fg=brightblue,bg=default]%Y-%m-%d"
+set -g status-interval 1
+set -g status-right "#[fg=brightblue,bg=default]%F #[fg=yellow,bold,bg=default] | %l:%M:%S %p"
 set -g status-right-length 150
 
 set -g status-left "#[fg=brightblue,bold]#h #[fg=yellow,bold]| "
