--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -83,7 +83,7 @@ run -b '~/.tmux/plugins/tpm/tpm'
 ############################################ Nested Sessions
 
 bind -n M-F11 set -qg status-bg blue
-bind -n M-12 set -qg status-bg default
+bind -n M-F12 set -qg status-bg default
 
 bind -n S-up \
   send-keys M-F12 \; \
