--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -82,26 +82,36 @@ run -b '~/.tmux/plugins/tpm/tpm'
 
 ############################################ Nested Sessions
 
-bind -n M-F11 set -qg status-bg blue
+bind -n M-F11 set -qg status-bg default
 bind -n M-F12 set -qg status-bg default
 
 bind -n S-up \
   send-keys M-F12 \; \
-  set -qg status-bg blue \; \
+  set -qg status-bg default \; \
+  set -qg status-left "#[fg=yellow,bold]#h #[fg=yellow,bold]| " \; \
+  set -qg status-right "#[fg=yellow,bg=default]%F #[fg=yellow,bold,bg=default] | %l:%M:%S %p" \; \
+  set -qg window-status-style fg=yellow,bg=default,dim \; \
+  set -qg window-status-format "#[fg=yellow]#I#[fg=yellow,bold]:#[fg=yellow]#W#[fg=yellow,bold]#F" \; \
+  set -qg window-status-current-style fg=yellow,bg=default,bright \; \
+  set -qg window-status-current-format "#[fg=yellow]#I#[fg=yellow,bold]:#[fg=yellow]#W#[fg=yellow,bold]#F" \; \
   unbind -n S-left \; \
   unbind -n S-right \; \
   unbind -n S-C-left \; \
   unbind -n S-C-right \; \
-  unbind -n C-t \; \
   set -qg prefix C-b
 
 bind -n S-down \
   send-keys M-F11 \; \
   set -qg status-bg default \; \
+  set -qg status-left "#[fg=brightblue,bold]#H #[fg=yellow,bold]| " \; \
+  set -qg status-right "#[fg=brightblue,bg=default]%F #[fg=yellow,bold,bg=default] | %l:%M:%S %p" \; \
+  set -qg window-status-style fg=blue,bg=default,dim \; \
+  set -qg window-status-format "#[fg=yellow]#I#[fg=yellow,bold]:#[fg=white]#W#[fg=yellow,bold]#F" \; \
+  set -qg window-status-current-style fg=white,bg=default,bright \; \
+  set -qg window-status-current-format "#[fg=brightblue]#I#[fg=yellow,bold]:#[fg=white]#W#[fg=brightblue,bold]#F" \; \
   bind -n S-left  prev \; \
   bind -n S-right next \; \
   bind -n S-C-left swap-window -t -1 \; \
   bind -n S-C-right swap-window -t +1 \; \
-  bind -n C-t new-window -a -c "#{pane_current_path}" \; \
   set -qg prefix C-a
 
