Prevent window from being renamed by command

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -21,6 +21,8 @@ set -g mouse on
 
 # Dont automatically rename windows
 set-option -g allow-rename off
+set-window-option -g allow-rename off
+set-window-option -g automatic-rename off
 
 # Automatically renumber windows
 set-option -g renumber-windows on
