--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -34,6 +34,9 @@ set -g history-limit 10000
 setw -g monitor-activity on
 set -g visual-activity on
 
+# Set EscapeTime (see: https://github.com/microsoft/WSL/issues/5931)
+set -sg escape-time 50
+
 # Add time to status bar. See strftime for time strings.
 set -g status-interval 1
 set -g status-right "#[fg=brightblue,bg=default]%F #[fg=yellow,bold,bg=default] | %l:%M:%S %p"
