--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -39,7 +39,9 @@ set -sg escape-time 50
 
 # Add time to status bar. See strftime for time strings.
 set -g status-interval 1
-set -g status-right "#[fg=brightblue,bg=default]%F #[fg=yellow,bold,bg=default] | %l:%M:%S %p"
+set -g @pomodoro_on "#[fg=magenta,bg=default]🍅 "
+set -g @pomodoro_complete "[fg=green,bg=default]🍅 "
+set -g status-right "#{pomodoro_status} #[fg=yellow,bg=default]| #[fg=brightblue,bg=default]%F #[fg=yellow,bold,bg=default] | %l:%M:%S %p"
 set -g status-right-length 150
 
 set -g status-left "#[fg=brightblue,bold]#h #[fg=yellow,bold]| "
@@ -115,6 +117,7 @@ bind -n S-down \
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'olimorris/tmux-pomodoro-plus'
 
 # Initialize TPM
 run -b '~/.tmux/plugins/tpm/tpm' 
