Add pomodoro timer

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -39,8 +39,12 @@ set -sg escape-time 50
 
 # Add time to status bar. See strftime for time strings.
 set -g status-interval 1
+
 set -g @pomodoro_on "#[fg=magenta,bg=default]🍅 "
-set -g @pomodoro_complete "[fg=green,bg=default]🍅 "
+set -g @pomodoro_complete "#[fg=green,bg=default]🍅 "
+set -g @pomodoro_notifications 'on'
+set -g @pomodoro_sound 'on'
+
 set -g status-right "#{pomodoro_status} #[fg=yellow,bg=default]| #[fg=brightblue,bg=default]%F #[fg=yellow,bold,bg=default] | %l:%M:%S %p"
 set -g status-right-length 150
 
