Updated aliases, gitconfig, install, and tmux conf

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,7 +1,7 @@
 # Change Ctrl-b mapping to Ctrl-a
 unbind C-b
 set-option -g prefix C-a
-bind-key C-a send-prefix
+bind a send-prefix
 
 # Switch windows quickly with C-a C-a
 bind-key C-a last-window
